[package]
name = "fanshim"
version = "0.1.0"
authors = ["Joao Moreno <mail@joaomoreno.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
tokio = "0.1"

[dev-dependencies]
colorsys = "0.5"

[dependencies.sysfs_gpio]
version = "0.5"
default-features = false
features = ["use_tokio"]

[profile.release]
codegen-units=1